<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="es.source.code.activity.SCOSEntry">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/et_name"
                style="@style/ThemeEditText"
                android:hint="@string/hint_account_name"
                android:drawableLeft="@drawable/account_name_selector"/>

        <EditText
                android:id="@+id/et_password"
                style="@style/ThemeEditText"
                android:inputType="textPassword"
                android:hint="@string/hint_account_password"
                android:drawableLeft="@drawable/account_password_selector"/>

        <Button
                android:id="@+id/btn_login"
                style="@style/ThemeButton"
                android:text="@string/text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btn_register"
                style="@style/ThemeButton"
                android:text="@string/text_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        <Button
                android:id="@+id/btn_back"
                style="@style/ThemeButton"
                android:text="@string/text_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
