<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="es.source.code.activity.SCOSEntry">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_logo"/>

    <Button
            android:id="@+id/btn_order"
            style="@style/GuideButton"
            android:text="@string/text_order"
            android:drawableLeft="@drawable/guide_btn_order_selector"/>

    <Button
            android:id="@+id/btn_form"
            style="@style/GuideButton"
            android:text="@string/text_form"
            android:drawableLeft="@drawable/guide_btn_form_selector"/>

    <Button
            android:id="@+id/btn_account"
            style="@style/GuideButton"
            android:text="@string/text_account"
            android:drawableLeft="@drawable/guide_btn_account_selector"/>

    <Button
            android:id="@+id/btn_help"
            style="@style/GuideButton"
            android:layout_marginBottom="20dp"
            android:text="@string/text_help"
            android:drawableLeft="@drawable/guide_btn_help_selector"/>


</LinearLayout>
